# auto-investor

./: .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
dags/: monthly_investment.py
scripts/: ollama-entrypoint.sh
src/: config.py  main.py
src/analysis/: llm_client.py  prompts.py
src/delivery/: base.py  email_notifier.py  ntfy.py  telegram.py  whatsapp.py
src/pipeline/: aggregator.py  cleaner.py  storage.py
src/recommendations/: generator.py  portfolio.py
src/scrapers/: base.py  rss_scraper.py  web_scraper.py  yahoo_finance.py
tests/: test_analysis.py  test_delivery.py  test_pipeline.py  test_scrapers.py
