[project]
name = "investment-automation"
version = "0.1.0"
description = "Monthly investment automation with LLM analysis"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "beautifulsoup4==4.13.3",
    "feedparser==6.0.11",
    "twilio==9.4.6",
    "structlog==25.1.0",
    "ollama==0.4.7",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.1.0",
    "lxml==5.3.1",
    "aiosmtplib==3.0.2",
    "yfinance==0.2.54",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "mypy==1.15.0",
    "ruff==0.9.10",
    "respx==0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "feedparser",
    "bs4",
    "twilio.*",
    "yfinance",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]